--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <picture class="product-img">
         <source srcset="images/image-product-desktop.jpg" media="(min-width: 600px)">
-        <img src="images/image-product-mobile.jpg" alt="perfume image"/>
+        <source srcset="images/image-product-mobile.jpg" alt="perfume image"/>
       </picture>
       <div class="product_content">
         <p class="product_category">Perfume</p>
